--- a/signalbox/templates/admin/signalbox/_fragments/_visible_replies.html
+++ b/signalbox/templates/admin/signalbox/_fragments/_visible_replies.html
@@ -34,7 +34,7 @@
                     {% endwith %}
                 </td>
                 <td>
-                    <a class="btn btn-small pull-right" href="{% url 'preview_reply' r.id %}">Show responses</a>
+                    <a class="btn btn-small pull-right" href="{% url 'admin:signalbox_reply_change' r.id %}">Show responses</a>
                 </td>
 
             </tr>
