--- a/signalbox/templates/admin/signalbox/assessor/observations_due.html
+++ b/signalbox/templates/admin/signalbox/assessor/observations_due.html
@@ -14,7 +14,7 @@
 <div class="span8">
     <table class="table">
         <tr>
-            <th>ID#</th>
+            <th>ID</th>
             <th>Label</th>
             <th>Username</th>
             <th>Due</th>
@@ -26,7 +26,7 @@
                 <td>{{observation.label}}</td>
                 <td>{{observation.dyad.user.username}}</td>
                 <td>{{observation.due|naturalday}}</td>
-                <td><a href="{% url 'start_double_entry' observation.token %}?success_url={% url 'observations_outstanding' %}">Enter data</a></td>
+                <td><a class="btn btn-mini btn-primary pull-right" href="{% url 'start_double_entry' observation.token %}?success_url={% url 'observations_outstanding' %}">Enter data</a></td>
             </tr>
         {% endfor %}
     </table>
