--- a/signalbox/templates/admin/signalbox/observation/change_form.html
+++ b/signalbox/templates/admin/signalbox/observation/change_form.html
@@ -1,4 +1,4 @@
-{% extends "signalbox:admin/change_form.html" %}
+{% extendss "signalbox:admin/change_form.html" %}
 
 {% block content %}
 {% if original %}
