--- a/signalbox/templates/admin/base.html
+++ b/signalbox/templates/admin/base.html
@@ -8,8 +8,8 @@
 {% block extrastyle %}{% endblock %}
 
 {% compress css %}
-<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery-ui.css" type="text/css">
-<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
+<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.ui.css" type="text/css">
+<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link type="text/css" href="{{ STATIC_URL }}css/signalbox.css" rel="stylesheet">
 <link rel="stylesheet" href="{{STATIC_URL}}css/jquery-ui-timepicker-addon.css" type="text/css" media="screen">
@@ -82,8 +82,7 @@ legend a:hover {
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
 
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.ui.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/underscore-min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/tab_anchor_setter.js"></script>
 
