--- a/signalbox/templates/error.html
+++ b/signalbox/templates/error.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>{% block title %}Signalbox: Online Research{% endblock title %}</title>
-    <script type="text/javascript" src="/static/js/jquery-1.7.1.min.js"></script>
-        <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen,print">
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen,print">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
