--- a/signalbox/templates/admin/base.html
+++ b/signalbox/templates/admin/base.html
@@ -119,7 +119,7 @@ legend a:hover {
     {% if not is_popup %}
     <!-- Header -->
 
-    {% if not debug %}
+    {% if debug %}
       <div class="alert alert-error"><h2>Warning: Site in debug mode. This is a security risk if this site is in active use.</h2></div>
     {% endif %}
 
