--- a/signalbox/templates/admin/base.html
+++ b/signalbox/templates/admin/base.html
@@ -82,6 +82,7 @@ legend a:hover {
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
 
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.ui.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/underscore-min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/tab_anchor_setter.js"></script>
