--- a/ask/templates/admin/ask/codebook.html
+++ b/ask/templates/admin/ask/codebook.html
@@ -4,10 +4,12 @@
 {% block content_title %}<a class="brand">Questionnaire Codebooks </a>{% endblock %}
 
 {% block content %}
+
+
     {% for asker in askers %}
     <h2>{{asker}}</h2>
 
-    {% for i in asker.pages %}
+    {% for i in asker.askpage_set.all %}
     <h3>Page {{i.progress_pages.0}}</h3>
     <table class="table table-hover">
         <tr>
@@ -19,14 +21,14 @@
             {% for j in i.get_questions %}
             <tr>
                 <td>
-                    <p><code> {{j.question.variable_name}}</code></p>
-                    {{j.question.text|markdown}}
+                    <p><code> {{j.variable_name}}</code></p>
+                    {{j.text|markdown}}
                 </td>
                 <td>
-                    <p class="muted">({{j.question.q_type}})</p>
-                    {% if j.question.choices.count > 0 %}
+                    <p class="muted">({{j.q_type}})</p>
+                    {% if j.choices.count > 0 %}
                     <pre>
-{{j.question.choices_as_json}}
+{{j.choices_as_json}}
                     </pre>
                     {% endif %}
                 </td>
